--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.animated-row{
+  transition: transform 5s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+table tr:nth-child(even){
+  background-color: antiquewhite;
+}
+
+table th {
+  background-color: #61dafb;
+  color: #282c34;
+}
+
+.highlited-row{
+  animation: highlight 1s ease-in-out;
+}
+
+@keyframes highlight{
+  0% {
+background-color: blue;
+  }
+  50% {
+    background-color: rebeccapurple;
+  }
+  100%{
+    background-color: yellow;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
